tests/ui/error-codes/E0426.rs
fn main () {
    loop {
        break 'a;
        //~^ ERROR E0426
    }
}
